Updated README.md to document the new flag values.